enviroment/k8s/dev/kafka/service/kafka-broker-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-kafka
spec:
  ports:
  - port: 9092
    name: external
    protocol: TCP
  - port: 29092
    name: internal
    protocol: TCP
  selector:
    service: kafka
  type: LoadBalancer
