enviroment/k8s/dev/kafka/service/ingress-service.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: 'nginx'
    ingress.citrix.com/insecure-port: "9092"
    ingress.citrix.com/insecure-service-type: "tcp"
spec:
  defaultBackend:
    service:
      name: service-kafka
      port:
        number: 9092
